--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ plugins {
   id 'java'
 }
 
+shadowJar {
+    transform(com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer)
+}
+
 version = '0.1.0'
 
 
@@ -23,7 +27,7 @@ allprojects {
     // Declare global dependencies
     dependencies {
         implementation group: 'de.webis.aitools', name: 'aitools4-commons-uima-webserver', version: '1.2.1'
-        implementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.30'
+        implementation group: 'de.webis.aitools', name: 'aitools4-aq-alexa', version: '6.3.1'
         implementation group: 'commons-io', name: 'commons-io', version: '2.6'
         implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.18'
         implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
@@ -31,6 +35,8 @@ allprojects {
         implementation group: 'edu.stanford.nlp', name: 'stanford-parser', version: '3.9.2'
         implementation group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '3.9.2'
         implementation group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '3.9.2', classifier: 'models'
+        implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-high-level-client', version: '7.4.2'
+        implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.11.1'
     }
 }
 
